# stellar-insights

./: .gitignore  ALERTS_INTEGRATION.md  ANCHOR_DETAIL_VERIFICATION.md  COMPILATION_FIX_SUMMARY.md  CORRIDOR_ANALYTICS_FEATURE.md  EMAIL_DIGEST_GUIDE.md  GIT_PUSH_COMMANDS.md  README.md  docker-compose.elk.yml  index.html  package-lock.json  package.json  tailwind.config.ts  verify-anchor-detail.sh
backend/: .env.example  CHANGES_APPLIED.md  CODE_QUALITY.md  Cargo.toml  HONEST_TEST_ASSESSMENT.md  IMPLEMENTATION_SUMMARY.md  LOAD_TESTING.md  PR_DESCRIPTION.md  QUICK_QUALITY_GUIDE.md  README.md  REFACTOR_CHECKLIST.md  REFACTOR_SUMMARY.md  SNAPSHOT_HASH_SERVICE.md  api_examples.md  check_warnings.ps1  deployment_checklist.md  integration_test_simulation.md  manual_test_results.md  seed_corridor_data.sql  validate_api.md
backend/.github/: PULL_REQUEST_TEMPLATE.md
backend/examples/: rpc_demo.rs  snapshot_generation_demo.rs
backend/load-tests/: IMPLEMENTATION_SUMMARY.md  INDEX.md  PERFORMANCE_BASELINE.md  QUICK_START.md  README.md  TROUBLESHOOTING.md
backend/migrations/: 002_create_corridor_metrics.sql  002_create_corridors.sql  002_create_metrics_corridors_snapshots.sql  003_create_ledger_tables.sql  006_create_users.sql
backend/src/: auth.rs  auth_middleware.rs  database.rs  env_config.rs  handlers.rs  http_cache.rs  lib.rs  logging.rs  main.rs  ml.rs  models.rs  rate_limit.rs  request_id.rs  request_signing_middleware.rs  rpc_handlers.rs  snapshot_handlers.rs
backend/tests/: analytics_tests.rs  api_corridors_test.rs  corridor_analytics_tests.rs  ingestion_test.rs  (+5 more)
(+128 files in other folders)
